Add Location Dropdown to layout.ejs

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,6 +18,11 @@
           <% } else { %>
           <li><a href="/auth/logout">Logout</a></li>
           <li><a href="/profile">Profile</a></li>
+          <form action="/">
+            <select name="location-dropdown" id="location-dropdown">
+              <option value="94577">SL(test)</option>
+            </select>
+          </form>
           <% } %>
         </ul>
       </nav>
