Add Start Button For Timer

--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -4,6 +4,7 @@
 <% } else { %>
 
     <h1>TEST Logged in page</h1>
+    <button id="start">Start!</button>
     <div id="timer-control">
         <h2 id="time">15:00</h2>
     </div>
