--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,6 +2,14 @@
 
 <h3>Welcome to your PROFILE</h3>
 
-<p>Id: <%= id %></p>
 <p>Name: <%= name %></p>
-<p>Email: <%= email %></p>
+
+<div id="text-posts">
+    <h3>Your Work:</h3>
+    <ul>
+        <% for (let i = 0; i < textposts.length; i++){%>
+            <% console.log("test******") %>
+            <li><p><%= textposts[i].content %></p></li>
+        <%}%>
+    </ul>
+</div>
