--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -20,6 +20,7 @@
         <div id="text-feild-control">
             <p><textarea name="content" id="text-feild" cols="30" rows="10"></textarea></p>
         </div>
+        <input type="hidden" name="userId" value="<%= id %>">
         <div id="submit-text">
             <button type="submit">submit</button>
         </div>
