main-page.ejs: Add Ids to Buttons

--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -9,12 +9,12 @@
         <h2 id="time">15:00</h2>
     </div>
     <div id="timer-buttons">
-        <button>-</button>
+        <button id="subtract-focus-time">-</button>
         <h4 id="focus-time">15:00</h4>
-        <button>+</button>
-        <button>-</button>
+        <button id="add-focus-time">+</button>
+        <button id="subtract-down-time">-</button>
         <h4 id="down-time">5:00</h4>
-        <button>+</button>
+        <button id="add-down-time">+</button>
     </div>
     <form action="/profile" method="POST">
         <div id="text-feild-control">
