main-page.ejs: add profile link

--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -4,6 +4,8 @@
 <% } else { %>
 
     <h1>TEST Logged in page</h1>
+    <a href="/profile">Profile</a>
+    <br>
     <button id="start">Start!</button>
     <div id="timer-control">
         <h2 id="time">15:00</h2>
