profile.ejs: Add main page return link

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,7 @@
 <h2>Profile Page</h2>
 
+<a href="/signedin">Return to main page</a>
+
 <h3>Welcome to your PROFILE</h3>
 
 <p>Name: <%= name %></p>
