--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -23,6 +23,7 @@
             <p><textarea name="content" id="text-feild" cols="30" rows="10"></textarea></p>
         </div>
         <input type="hidden" name="userId" value="<%= id %>">
+        <input type="hidden" name="isdeleted" value="true">
         <div id="submit-text">
             <button type="submit">submit</button>
         </div>
