profile.ejs: Add Delete Button to Posts

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,6 +12,9 @@
         <% for (let i = 0; i < textposts.length; i++){%>
             <% console.log("test******") %>
             <li><p><%= textposts[i].content %></p></li>
+            <form action="/profile/delete" method="POST">
+                <button>delete</button>
+            </form>
         <%}%>
     </ul>
 </div>
