--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -20,7 +20,7 @@
     </div>
     <form action="/profile" method="POST">
         <div id="text-feild-control">
-            <p><textarea name="content" id="text-feild" cols="30" rows="10"></textarea></p>
+            <p><textarea name="content" id="text-feild" cols="30" rows="10" class="hidden"></textarea></p>
         </div>
         <input type="hidden" name="userId" value="<%= id %>">
         <input type="hidden" name="isdeleted" value="false">
