style.css: Add styling for skytext variable

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,3 +15,11 @@ h1 {
 .hidden {
   visibility: hidden;
 }
+
+#main-content {
+  background-color: brown;
+}
+
+#main-content-sunny {
+  background-color: white;
+}
