main-page.ejs: Add location name

--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -5,6 +5,7 @@
 
     <div id="main-content">
         <h1>TEST Logged in page</h1>
+        <h3><%=name%></h3>
         <p id="weather-info">
             <%=skytext%> 
         </p>
