profile.ejs: Fix return link

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,6 @@
 <h2>Profile Page</h2>
 
-<a href="/signedin">Return to main page</a>
+<a href="/placeform">return to place choice!</a>
 
 <h3>Welcome to your PROFILE</h3>
 
