style.css: Fix main content styling - change from id to class

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,10 +16,10 @@ h1 {
   visibility: hidden;
 }
 
-#main-content {
+.main-content {
   background-color: darkgray;
 }
 
-#main-content-sunny {
+.main-content-sunny {
   background-color: rgb(247, 247, 162);
 }
