main-page.ejs: Fix main-content styling - change from id to class

--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -3,7 +3,7 @@
     <h1>nope</h1>
 <% } else { %>
 
-    <div id="main-content">
+    <div class="main-content">
         <h1>TEST Logged in page</h1>
         <h3><%=name%></h3>
         <p id="weather-info">
