--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,9 +17,42 @@ h1 {
 }
 
 .main-content {
-  background-color: darkgray;
+  background-color: rgb(145, 143, 143);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main-content-sunny {
   background-color: rgb(247, 247, 162);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.weather-style-sunny {
+  background-color: lightskyblue;
+}
+
+.weather-style {
+  background-color: lightgray;
+}
+
+
+.timer {
+  margin: 10px;
+}
+
+#timer-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding:20px;
+  margin: 20px;
+}
+
+
+
+#start-container {
+  margin: 20px;
 }
