layout.ejs: Update Header

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Authentication</title>
+    <title>Wrote to Relax!</title>
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/app.js" defer></script>
   </head>
@@ -21,7 +21,6 @@
         </ul>
       </nav>
     </header>
-    <h1>Authentication</h1>
     <%- body %>
   </body>
 </html>
