--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: lightblue;
+  background-color: antiquewhite;
 }
 
 nav ul li {
@@ -12,12 +12,16 @@ h1 {
   color: chartreuse;
 }
 
+p {
+  font-size: large;
+}
+
 .hidden {
   visibility: hidden;
 }
 
 .main-content {
-  background-color: rgb(145, 143, 143);
+  background: linear-gradient(0deg, rgb(182, 234, 255) 0%, rgb(117, 117, 117) 100%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,7 +41,7 @@ h1 {
 }
 
 .weather-style {
-  background-color: lightgray;
+  background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgb(138, 138, 138) 100%);
 }
 
 
@@ -74,4 +78,23 @@ h1 {
   flex-direction: column;
   justify-content: center;
   margin: 20px;
+}
+
+#text-posts {
+  max-width: 500px;
+  background-color: rgba(41, 48, 54, 0.062);
+  padding: 20px 60px 20px 20px;
+  border-radius: 25px;
+}
+
+#profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#text-box {
+  background-color: rgba(41, 48, 54, 0.192);
+  padding: 20px;
+  border-radius: 25px;
 }
