--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,10 @@ p {
   font-size: large;
 }
 
+label {
+  font-size: large;
+}
+
 .hidden {
   visibility: hidden;
 }
@@ -49,6 +53,22 @@ p {
   margin: 10px;
 }
 
+.locations {
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  margin: 20px auto 10px auto;
+  background-color: rgba(41, 48, 54, 0.062);
+  border-radius: 25px;
+}
+
+.location {
+  padding: 10px;
+  margin: 5px;
+}
+
 #timer-buttons {
   display: flex;
   flex-direction: row;
@@ -57,8 +77,6 @@ p {
   margin: 20px;
   border-radius: 50%;
 }
-
-
 
 #start-container {
   padding: 5px 130px 20px 130px;
