--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,27 @@ label {
   font-size: large;
 }
 
+li {
+  list-style-type: none;
+}
+
+a {
+  background-color: rgba(107, 99, 116, 0.349);
+  color: white;
+  padding: .5em 1em;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-radius: 25px;
+}
+
+a:hover {
+  background-color: #555;
+}
+
+a:active {
+  background-color: black;
+}
+
 .hidden {
   visibility: hidden;
 }
@@ -67,6 +88,13 @@ label {
 .location {
   padding: 10px;
   margin: 5px;
+}
+
+.home-timer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
 }
 
 #timer-buttons {
