index.ejs: Add content to landing page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,23 @@
-<h2>Homepage</h2>
+<h2>Write to Relax!</h2>
+
+<p>A creative writing environment that incorperates a focus timer and weather data from a location of your choice, for a unique and relaxing experience!<br>Try out the focus timer below for any computer work where you need to remember to take healthy screen breaks!
+
+</p>
+
+<div class="home-timer">
+    <div id="weather-info" class="hidden">
+    </div>
+    <div id="start-container" class="weather-style">
+        <h2 id="time">5:00</h2>
+        <button id="start">Start!</button>
+
+    </div>
+    <div class="weather-style" id="timer-buttons">
+        <button class="timer" id="subtract-focus-time">-</button>
+        <h4 class="timer" id="focus-time">5:00</h4>
+        <button class="timer" id="add-focus-time">+</button>
+        <button class="timer" id="subtract-down-time">-</button>
+        <h4 class="timer" id="down-time">2:00</h4>
+        <button class="timer" id="add-down-time">+</button>
+    </div>
+</div>
