main-page.ejs: Wrap elements in div for styling

--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -9,8 +9,10 @@
             <p>
                 <%=skytext%> 
             </p>
-            <a href="/profile">Profile</a>
-            <a href="/placeform">Change or add a place</a>
+            <div class="main-page-links">
+                <a href="/profile">Profile</a>
+                <a href="/placeform">Change place</a>
+            </div>
         </div>
         <br>
         <div id="start-container" class="weather-style">
