profile.ejs: Add class to h3 element

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,7 +8,7 @@
     <p>Name: <%= name %></p>
     
     <div id="text-posts">
-        <h3>Your Work:</h3>
+        <h3 class="profile-title">Your Work:</h3>
         <ul>
             <% for (let i = 0; i < textposts.length; i++){%>
                 <li><p id="text-box"><%= textposts[i].content %></p></li>
