main-page.ejs: Add "delete place" button

--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -36,5 +36,9 @@
                 <button type="submit">submit</button>
             </div>        
         </form>
+        <br>
+        <form action="/signedin/<%=zipcode%>" method="POST">
+            <button class="delete">delete place</button>
+        </form>
     </div>
 <% } %>
