--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,9 +1,11 @@
-<form action="/auth/login" method="POST">
-  <label for="auth-email">Email</label>
-  <input id="auth-email" type="email" name="email">
+<form class="auth" action="/auth/login" method="POST">
+  <label class="auth-element" for="auth-email">Email</label>
+  <input class="auth-element" id="auth-email" type="email" name="email">
 
-  <label for="auth-password">Password</label>
-  <input id="auth-password" type="password" name="password">
+  <label class="auth-element" for="auth-password">Password</label>
+  <input class="auth-element" id="auth-password" type="password" name="password">
 
-  <input type="submit" value="Log In">
+  <input class="auth-element" type="submit" value="Log In">
 </form>
+
+<a href="/">back</a>
