--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,12 @@
 body {
   background-color: antiquewhite;
   text-align: center;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 nav ul li {
@@ -58,10 +64,6 @@ a:active {
 }
 
 button {
-
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 20px;
   outline: none;
   font-weight: 800;
   transition: color .5s;
@@ -117,36 +119,41 @@ button:active {
   visibility: hidden;
 }
 
-.main-content {
+.foo {
   background: linear-gradient(0deg, rgb(182, 234, 255) 0%, rgb(117, 117, 117) 100%);
+}
+
+.main-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 10px;
+  width: 375px;
 }
 
-.main-content-sunny {
+.sunny-background {
   background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(250,255,90,1) 100%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 10px;
 }
 
-.weather-style-sunny {
+.sunny-element {
   background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(113,197,255,1) 100%);
 }
 
-.weather-style {
+.cloudy-element {
   background: linear-gradient(180deg, rgb(255, 255, 255) 0%, rgb(138, 138, 138) 100%);
 }
 
 
 .timer {
   margin: 10px;
-  display: flex;
+  /* display: flex;
   align-items: center;
-  flex-direction: column;
+  flex-direction: column; */
+}
+
+.timer-countdown {
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .locations {
@@ -175,30 +182,40 @@ button:active {
 .main-page-links {
   display: flex;
   flex-direction: column-reverse;
+  max-width: 50%;
+  align-items: center;
 }
 
+.timer-button-container {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
 
 #timer-buttons {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  padding:20px;
-  margin: 20px;
+  padding: 20px 0;
   border-radius: 50%;
-  max-width: 350px;
+  width: 100%;
 }
 
 #start-container {
-  padding: 5px 130px 20px 130px;
+  padding: 10px 0px 20px 0px;
   margin: 20px;
   border-radius: 50%;
+  width: 100%;
 }
 
 #weather-info {
   margin: 20px;
-  padding: 20px 60px 40px 60px;
+  padding: 20px 0px 40px 0px;
   border-radius: 50%;
   text-align: center;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 #text-feild-control {
