--- a/views/placeform.ejs
+++ b/views/placeform.ejs
@@ -1,16 +1,18 @@
-<form class="locations" action="/placeform" method="POST">
-    <label class="location" for="place-name">Name of location:</label>
-    <input class="location" type="text" name="name" placeholder="enter name" required>
-    <label class="location" for="place-zipcode">Zipcode:</label>
-    <input class="location" type="string" name="zipcode" placeholder="enter zipcode" minlength="5" maxlength="5" required>
-    <button class="location" type="submit">add!</button>
-</form>
-<form class="locations" action="/signedin/<%=places.zipcode%>" method="GET">
-    <label for="location-dropdown">Choose a location!</label>
-    <% for (let i = 0; i < places.length; i++){%>
-        <li class="location" ><a href="signedin/<%=places[i].zipcode%>"><%=places[i].name %></a></li>
-    <%}%>
-</form> 
-<div class="locations">
+<div class="place-form-control">
+    <form class="locations" action="/placeform" method="POST">
+        <label class="location" for="place-name">Name of location:</label>
+        <input class="location" type="text" name="name" placeholder="enter name" required>
+        <label class="location" for="place-zipcode">Zipcode:</label>
+        <input class="location" type="string" name="zipcode" placeholder="enter zipcode" minlength="5" maxlength="5" required>
+        <button class="location" type="submit">add!</button>
+    </form>
+    <form class="locations" action="/signedin/<%=places.zipcode%>" method="GET">
+        <label for="location-dropdown">Choose a location!</label>
+        <% for (let i = 0; i < places.length; i++){%>
+            <li class="location" ><a href="signedin/<%=places[i].zipcode%>"><%=places[i].name %></a></li>
+        <%}%>
+    </form> 
+</div>
+<div class="profile-link">
     <a href="/profile"> profile</a>  
 </div>
