--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,7 +139,9 @@ button:active {
   flex-direction: column;
   align-items: center;
   border-radius: 10px;
-  width: 375px;
+  width: 400px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .sunny-background {
@@ -174,7 +176,6 @@ button:active {
   align-items: center;
   padding: 20px;
   margin: 20px auto 10px auto;
-  background-color: rgba(41, 48, 54, 0.062);
   border-radius: 25px;
 }
 
@@ -187,7 +188,13 @@ button:active {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 10px;
+  /* background-color: rgba(41, 48, 54, 0.062);
+  border-radius: 25px; */
+}
+
+.place-form-control {
+  background-color: rgba(41, 48, 54, 0.062);
+  border-radius: 25px;
 }
 
 .main-page-links {
@@ -203,19 +210,23 @@ button:active {
   justify-content: space-between;
 }
 
+.profile-link {
+  margin-top: 20px;
+}
+
 #timer-buttons {
   display: flex;
   flex-direction: row;
   padding: 20px 0;
   border-radius: 50%;
-  width: 100%;
+  width: 90%;
 }
 
 #start-container {
   padding: 10px 0px 20px 0px;
   margin: 20px;
   border-radius: 50%;
-  width: 100%;
+  width: 90%;
 }
 
 #weather-info {
@@ -223,7 +234,7 @@ button:active {
   padding: 20px 0px 40px 0px;
   border-radius: 50%;
   text-align: center;
-  width: 100%;
+  width: 90%;
   display: flex;
   align-items: center;
   flex-direction: column;
