--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,10 @@ button:active {
   background-color: rgb(253, 161, 161);  
 }
 
+.weather-style {
+  margin-right: 15px;
+}
+
 .auth {
   display: flex;
   flex-direction: column;
@@ -188,6 +192,7 @@ button:active {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
   /* background-color: rgba(41, 48, 54, 0.062);
   border-radius: 25px; */
 }
