main-page.ejs: Change foo to descriptive variable

--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -3,7 +3,7 @@
     <h1>nope</h1>
 <% } else { %>
 
-    <div class="main-content foo">
+    <div class="main-content cloudy">
         <div id="weather-info" class="cloudy-element">
             <h1><%=name%></h1>
             <p>
