--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,6 +219,12 @@ button:active {
   margin-top: 20px;
 }
 
+.weather-name {
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
 #timer-buttons {
   display: flex;
   flex-direction: row;
