main-page.ejs: Change header to div element

--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -5,7 +5,7 @@
 
     <div class="main-content cloudy">
         <div id="weather-info" class="cloudy-element">
-            <h1><%=name%></h1>
+            <div class="weather-name"><%=name%></div>
             <p>
                 <%=skytext%> 
             </p>
