--- a/views/placeform.ejs
+++ b/views/placeform.ejs
@@ -1,3 +1,7 @@
+<% if (!currentUser) {%>
+    
+    <h1>nope</h1>
+<% } else { %>
 <div class="place-form-control">
     <form class="locations" action="/placeform" method="POST">
         <label class="location" for="place-name">Name of location:</label>
@@ -16,3 +20,5 @@
 <div class="profile-link">
     <a href="/profile"> profile</a>  
 </div>
+
+<% } %>
