--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,7 @@
+<% if (!currentUser) {%>
+    
+    <h1>nope</h1>
+<% } else { %>
 <div id="profile">
     <h2>Profile Page</h2>
     
@@ -20,3 +24,4 @@
         </ul>
     </div>   
 </div>
+<% } %>
