404.ejs: Change image

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,6 +1,6 @@
 <div style="margin:25px;">
-    <h2>Unfortunately, looks like we've hit a snag.</h2>
-    <img style="width:400px;height:400px;border-radius:50%;margin-left:10px;"src="https://user-images.githubusercontent.com/13144457/107567730-e8cfcc00-6b9a-11eb-8740-334dcc8d9729.png" alt="rocco">
+    <h2>Unfortunately, looks like you're lost.</h2>
+    <img src="https://img.buzzfeed.com/buzzfeed-static/static/2018-05/26/16/asset/buzzfeed-prod-web-05/sub-buzz-10914-1527366582-3.jpg?downsize=700%3A%2A&amp;output-quality=auto&amp;output-format=auto&amp;output-quality=auto&amp;output-format=auto&amp;downsize=360:*" alt="You're lost">
     <h3>Please head back to the home page. Thanks again.</h3>
     <a href="/">Go back home</a>
 </div>
