main-page.ejs: Add class "hidden" to submit button

--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -37,7 +37,7 @@
                 <p><textarea name="content" id="text-feild" cols="30" rows="10" class="hidden"></textarea></p>
                 <input type="hidden" name="userId" value="<%= id %>">
                 <input type="hidden" name="isdeleted" value="false">           
-                <button type="submit">submit</button>
+                <button class="hidden" id="submit" type="submit">submit</button>
             </div>        
         </form>
         <br>
