layout.ejs: Add font link to header

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Write to Relax!</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Podkova&display=swap" rel="stylesheet">
     <script src="/js/app.js" defer></script>
   </head>
   <body>
