Add home return if user invalid

--- a/views/placeform.ejs
+++ b/views/placeform.ejs
@@ -1,6 +1,7 @@
 <% if (!currentUser) {%>
     
     <h1>nope</h1>
+    <a href="/">Go back home</a>
 <% } else { %>
 <div class="place-form-control">
     <form class="locations" action="/placeform" method="POST">
