--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,7 @@
 <% if (!currentUser) {%>
     
     <h1>nope</h1>
+    <a href="/">Go back home</a>
 <% } else { %>
 <div id="profile">
     <h2>Profile Page</h2>
