--- a/views/main-page.ejs
+++ b/views/main-page.ejs
@@ -1,6 +1,7 @@
 <% if (!currentUser) {%>
     
     <h1>nope</h1>
+    <a href="/">Go back home</a>
 <% } else { %>
 
     <div class="main-content cloudy">
